# hexc

./: .gitmodules  CMakeLists.txt  README.md
include/: hexc.h
lib/: ai.c  board.c  color.c  game.c  grid.c  hexc.c  montecarlo.c  player.c  state.c
src/: main.c
test/: grid.c
